[project]
name = "data_utils"
version = "0.1"
authors = [
  { name = "Anonymous", email = "anonymous@todo.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
ignore = ["E501"]
